--- a/TODO.txt
+++ b/TODO.txt
@@ -12,3 +12,5 @@ Equation: Base Vectors accordion box overlaps radio buttons
 Zero-length sum vector label should not be centered on tail location
 
 Revert origin manipulator diameter to be specified in view coordinates.
+
+Disable eraser button when there are no vectors to erase.
