update TODO list

--- a/TODO.txt
+++ b/TODO.txt
@@ -20,4 +20,4 @@ Tick labels on graph
 
 Change vector drag bounds and 'drag off' behavior
 
-Toolbox and radio buttons have a very similar look, and are close together. Will there be confusion?
+Vector toolbox and radio buttons have a very similar look, and are close together. Will there be confusion?
