--- a/TODO.txt
+++ b/TODO.txt
@@ -10,7 +10,7 @@ Equation: Base Vectors accordion box overlaps radio buttons
 
 Zero-length sum vector label should not be centered on tail location
 
-Revert origin manipulator diameter to be specified in view coordinates.
+Make origin manipulator smaller, expand pointer areas
 
 Disable eraser button when there are no vectors to erase.
 
