--- a/TODO.txt
+++ b/TODO.txt
@@ -1,12 +1,13 @@
 TODO list for vector-addition
 
+DONE: #110 checkbox for 'c' and 'f' vectors
+DONE: #139, #150 Disable eraser button when there are no vectors to erase.
+
 VectorAdditionColors.EQUATION_SUM_FILL and EQUATION_SUM_STROKE should be in VectorColorPalettes
 
 Zero-length sum vector label should not be centered on tail location
 
 #153 Equation: different look for base vectors, gray
-
-DONE #139, #150 Disable eraser button when there are no vectors to erase.
 
 #148 Collapse equation scenes to one graph for each snap mode.
 
@@ -25,8 +26,6 @@ DONE #139, #150 Disable eraser button when there are no vectors to erase.
 #127 Make origin manipulator smaller, expand pointer areas
 
 #112 Vector Values for 's' are shown after Sum is unchecked
-
-#110 checkbox for 'c' and 'f' vectors
 
 #107 polish icons on snap mode radio buttons
 
