--- a/TODO.txt
+++ b/TODO.txt
@@ -2,12 +2,11 @@ TODO list for vector-addition
 
 DONE: #110 checkbox for 'c' and 'f' vectors
 DONE: #139, #150 Disable eraser button when there are no vectors to erase.
+DONE: #153 Equation: different look for base vectors, opaque gray
 
 VectorAdditionColors.EQUATION_SUM_FILL and EQUATION_SUM_STROKE should be in VectorColorPalettes
 
 Zero-length sum vector label should not be centered on tail location
-
-#153 Equation: different look for base vectors, gray
 
 #148 Collapse equation scenes to one graph for each snap mode.
 
@@ -40,3 +39,5 @@ Zero-length sum vector label should not be centered on tail location
 DESIGN: Should sumVisibleProperty be per scene or global? what about Lab?
 
 DESIGN: Vector toolbox and radio buttons have a very similar look, and are close together. Will there be confusion?
+
+DESIGN: Do we need to show components for base vectors? See TODO in EquationSceneNode
