--- a/TODO.txt
+++ b/TODO.txt
@@ -3,10 +3,13 @@ TODO list for vector-addition
 DONE: #110 checkbox for 'c' and 'f' vectors
 DONE: #139, #150 Disable eraser button when there are no vectors to erase.
 DONE: #153 Equation: different look for base vectors, opaque gray
+DONE: #112 Vector Values for 's' are shown after Sum is unchecked
 
 VectorAdditionColors.EQUATION_SUM_FILL and EQUATION_SUM_STROKE should be in VectorColorPalettes
 
 Zero-length sum vector label should not be centered on tail location
+
+BUG: Lab screen, check both Sum checkboxes, select one sum on graph, other sum disappears from graph
 
 #148 Collapse equation scenes to one graph for each snap mode.
 
@@ -23,8 +26,6 @@ Zero-length sum vector label should not be centered on tail location
 #127 adjust graph range and MVT
 
 #127 Make origin manipulator smaller, expand pointer areas
-
-#112 Vector Values for 's' are shown after Sum is unchecked
 
 #107 polish icons on snap mode radio buttons
 
