update TODO list

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,6 +1,7 @@
 TODO list for vector-addition
 
 DONE: #110 checkbox for 'c' and 'f' vectors
+DONE: #107 polish icons on snap mode radio buttons
 DONE: #139, #150 Disable eraser button when there are no vectors to erase.
 DONE: #153 Equation: different look for base vectors, opaque gray
 DONE: #112 Vector Values for 's' are shown after Sum is unchecked
@@ -10,35 +11,19 @@ VectorAdditionColors.EQUATION_SUM_FILL and EQUATION_SUM_STROKE should be in Vect
 Zero-length sum vector label should not be centered on tail location
 
 BUG: Lab screen, check both Sum checkboxes, select one sum on graph, other sum disappears from graph
-
-#148 Collapse equation scenes to one graph for each snap mode.
-
-#152 Change vector drag bounds and 'drag off' behavior
-
-#140 alignment problem with coefficients in equations
-
-#136 add cueing arrows to vector head
-
-#134 layout of stuff to right of graph
-
-#128 layout of stuff above the graph
-
-#127 adjust graph range and MVT
-
-#127 Make origin manipulator smaller, expand pointer areas
-
-#107 polish icons on snap mode radio buttons
-
-#99 Tick labels on graph
-
-#94 sum vector associated with selected vector should be in front
-
-#93 mitigate overlapping labels
+DESIGN: Should sumVisibleProperty be per scene or global? what about Lab?
+DESIGN: Vector toolbox and radio buttons have a very similar look, and are close together. Will there be confusion?
+DESIGN: Do we need to show components for base vectors? See TODO in EquationSceneNode
 
 #107, #134 Equation: Base Vectors accordion box overlaps radio buttons
-
-DESIGN: Should sumVisibleProperty be per scene or global? what about Lab?
-
-DESIGN: Vector toolbox and radio buttons have a very similar look, and are close together. Will there be confusion?
-
-DESIGN: Do we need to show components for base vectors? See TODO in EquationSceneNode
+#148 Collapse equation scenes to one graph for each snap mode.
+#152 Change vector drag bounds and 'drag off' behavior
+#140 alignment problem with coefficients in equations
+#136 add cueing arrows to vector head
+#134 layout of stuff to right of graph
+#128 layout of stuff above the graph
+#127 adjust graph range and MVT
+#127 Make origin manipulator smaller, expand pointer areas
+#99 Tick labels on graph
+#94 sum vector associated with selected vector should be in front
+#93 mitigate overlapping labels
