--- a/TODO.txt
+++ b/TODO.txt
@@ -1,14 +1,8 @@
 TODO list for vector-addition
 
-DONE: #110 checkbox for 'c' and 'f' vectors
 DONE: #107 polish icons on snap mode radio buttons
-DONE: #139, #150 Disable eraser button when there are no vectors to erase.
-DONE: #153 Equation: different look for base vectors, opaque gray
-DONE: #112 Vector Values for 's' are shown after Sum is unchecked
 
 VectorAdditionColors.EQUATION_SUM_FILL and EQUATION_SUM_STROKE should be in VectorColorPalettes
-
-Zero-length sum vector label should not be centered on tail location
 
 BUG: Lab screen, check both Sum checkboxes, select one sum on graph, other sum disappears from graph
 DESIGN: Should sumVisibleProperty be per scene or global? what about Lab?
@@ -16,6 +10,7 @@ DESIGN: Vector toolbox and radio buttons have a very similar look, and are close
 DESIGN: Do we need to show components for base vectors? See TODO in EquationSceneNode
 DESIGN: What color should component vectors be for 'c' and 'f' in Equation screen?
 
+#156 Zero-length sum vector label should not be centered on tail location
 #107, #134 Equation: Base Vectors accordion box overlaps radio buttons
 #148 Collapse equation scenes to one graph for each snap mode.
 #152 Change vector drag bounds and 'drag off' behavior
