--- a/TODO.txt
+++ b/TODO.txt
@@ -2,21 +2,20 @@ TODO list for vector-addition
 
 VectorAdditionColors.EQUATION_SUM_FILL and EQUATION_SUM_STROKE should be in VectorColorPalettes
 
+#165 options not passed to super
 #160 Lab screen, check both Sum checkboxes, select one sum on graph, other sum disappears from graph
 #159 What color should component vectors be for 'c' and 'f' in Equation screen?
 #158 should components be shown for base vectors?
-#157 scope of 'Sum' checkboxes
 #156 Zero-length sum vector label should not be centered on tail location
-#107, #134 Equation: Base Vectors accordion box overlaps radio buttons
-#148 Collapse equation scenes to one graph for each snap mode.
 #152 Change vector drag bounds and 'drag off' behavior
+#148 Collapse equation scenes to one graph for each snap mode.
 #140 alignment problem with coefficients in equations
 #136 add cueing arrows to vector head
 #134 layout of stuff to right of graph
 #128 layout of stuff above the graph
 #127 adjust graph range and MVT
 #127 Make origin manipulator smaller, expand pointer areas
-#99 Tick labels on graph
+#107, #134 Equation: Base Vectors accordion box overlaps radio buttons
 #94 sum vector associated with selected vector should be in front
 #93 mitigate overlapping labels
 #91 dragging tip to tail vectors
